# ssr-palooza

./: README.md  docker-compose.yml  init_db.sh
htmx-rust/: .gitignore  Cargo.toml  input.css  package.json  pnpm-lock.yaml  tailwind.config.js
htmx-rust/scripts/: extensions.js  index.js
htmx-rust/src/: database.rs  lib.rs  main.rs  state.rs  templates.rs
htmx-rust/src/views/: frameworks.rs  home.rs  mod.rs
htmx-rust/templates/: confirm-modal.html  dashboard.html  home.html  layout.html  menu.html
htmx-rust/templates/components/: inputs.html
htmx-rust/templates/frameworks/: framework-delete-response.html  framework-detail.html  framework-edit.html  framework-new.html  framework-patch-response.html  framework-post-response.html  frameworks-macros.html  frameworks.html
leptos-actix/: .gitignore  Cargo.toml  input.css  package.json
leptos-actix/src/: app.rs  database.rs  lib.rs  main.rs
next-js/: next.config.js  package-lock.json  package.json
next-js/app/: globals.css  layout.tsx  template.tsx
next-js/lib/: db.ts  delay.ts  utils.ts
nuxt/: app.vue  bun.lockb  nuxt.config.ts  package.json
nuxt/components/: UBreadcrumb.vue  UBreadcrumbs.vue  UButton.vue  UCard.vue  UDefer.vue  ULoading.vue
nuxt/layouts/: workflow.vue
nuxt/middleware/: default-redirect.ts
nuxt/pages/: dashboard.vue  frameworks.vue  index.vue
nuxt/stores/: frameworks.ts
qwik/: .gitignore  bun.lockb  package.json
qwik/src/: global.css  root.tsx
remix/: bun.lockb  components.json  package.json  tailwind.config.ts
svelte-kit/: package.json  pnpm-lock.yaml
(+139 files in other folders)
